--- a/style.css
+++ b/style.css
@@ -1,61 +1,109 @@
-body{
+*{
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: nature.jpg;
-    background-size: cover;
-
 }
-
-.login-box{
-    width: 280px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-}
-
-.login-box h1{
-    float: left;
-    font-size: 40px;
-    border-bottom: 6px solid;
-    margin-bottom: 50px;
-    padding: 13px 0;
-}
-.textbox{
+.hero{
+    height: 100%;
     width: 100%;
-    overflow: hidden;
-    font-size: 20px;
-    padding: 8px 0;
-    margin: 8px 0;
-    border-bottom: 1px solid green;
+    background-image: linear-gradient(rgba(235, 83, 83, 0.4),rgba(0,0,0,0.4)),url(banner.jpg);
+    background-position: center;
+    background-size: cover;
+    position: absolute;
 }
-.textbox i{
-    width: 26px;
-    float: left;
-    text-align: center;
-}
-
-.textbox input{
-    border: none;
-    outline: none;
-    background: none;
-    color: whiye;
-    font-size: 18px;
-    width: 80px;
-    float: left;
-    margin: 10px;
-
-}
-
-.btn{
-    width: 100px;
-    background: none;
-    border: 2px solid #4caf50;
-    color: white;
+.form-box{
+    width: 380px;
+    height: 480px;
+    position: relative;
+    margin: 6% auto;
+    background: #fff;
     padding: 5px;
-    font-size: 18px;
-    cursor: pointer;
-    margin: 12px 0;
+ 
 }
+.button-box{
+    width: 220px;
+    margin: 35px auto;
+    position: relative;
+    box-shadow: 0 0 20px 9px #f010081f;
+    border-radius: 30px;
+
+}
+.toggle-btn{
+    padding: 10px 30px;
+    cursor: pointer;
+    background: transparent;
+    border: 0;
+    outline: none;
+    position: relative;
+}
+#btn{
+    top: 0;
+    left: 0;
+    position: absolute;
+    width: 110px;
+    height: 100%;
+    background: linear-gradient(to right, #ff105f, #ffad06);
+    border-radius: 30px;
+    transition: .5s;
+
+}
+.social-icons{
+    margin: 30px auto;
+    text-align: center;
+
+}
+.social-icons img{
+    width: 30px;
+    margin: 0 12px;
+    box-shadow: 0 0 20px 0 #7f7f7f3d;
+    cursor: pointer;
+    border-radius: 50%;
+}
+.input-group{
+    top: 180px;
+    position: absolute;
+    width: 280px;
+    transition: .5s;;
+
+}
+.input-field{
+    width: 100%;
+    padding: 10px 0;
+    margin: 5px 0;
+    border-left: 0;
+    border-top: 0;
+    border-right: 0;
+    border-bottom: 1px solid #999;
+    outline: none;
+    background: transparent;
+}
+.submit-btn{
+    width: 85%;
+    padding:10px 30px;
+    cursor: pointer;
+    display: block;
+    margin: auto;
+    background: linear-gradient(to right, #ff105f, #ffad06);
+    border: 0;
+    outline: none;
+    border-radius: 30px;
+}
+.check-box{
+    margin: 30px 10px 30px 0;
+
+}
+span{
+    color: #777;
+    font-size: 12px;
+    bottom: 68px;
+    position: absolute;
+}
+#login{
+    left: 50px;
+
+}
+#register{
+    left: 450px;
+    
+}
+
